# decision-lens

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  Dockerfile.api  LICENSE  PROOF.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  config.py  main.py
api/agents/: __init__.py  critic.py  extraction.py  graph.py  intake.py  reasoning.py  report.py  retrieval.py
api/evals/: __init__.py  runner.py
api/observability/: __init__.py  tracing.py
api/prompts/: __init__.py  critic.py  extraction.py  intake.py  reasoning.py
api/providers/: __init__.py  demo_client.py  llm.py
api/retrieval/: __init__.py  store.py
api/schemas/: __init__.py  api.py  pipeline.py
data/: golden_cases.jsonl
data/mock_sources/: cases.jsonl  policies.jsonl  regulations.jsonl
data/sample_cases/: case_001_administrative_denial.txt
docs/: architecture.md  evaluation.md  failure-modes.md
docs/img/: README.md
scripts/: run_evals.py
tests/: test_critic.py  test_evals.py  test_extraction.py  test_intake.py  test_pipeline_e2e.py  test_reasoning.py  test_report.py  test_retrieval.py  test_schemas.py  test_tracing.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: AgentTimeline.tsx  CitationBadge.tsx  EvalDashboard.tsx  EvidenceList.tsx  FindingsPanel.tsx  FlagsList.tsx  IssueCard.tsx  StrategyPanel.tsx  Tabs.tsx
web/src/hooks/: useAnalyze.ts
web/src/lib/: api.ts
web/src/pages/: AnalyzePage.tsx  ResultsPage.tsx
web/src/types/: api.ts
