[project]
name = "decision-lens"
version = "0.1.0"
description = "A composable multi-agent pipeline that turns dense administrative decisions into grounded, citation-checked analysis reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "litellm>=1.55",
    "instructor>=1.7",
    "langgraph>=0.2.60",
    "langchain-core>=0.3",
    "chromadb>=0.5",
    "pypdf>=5.1",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "httpx>=0.28",
]
observability = [
    "langfuse>=2.55",
]
evals = [
    "ragas>=0.2",
    "datasets>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
